Fixed: Proton theme: Tab: Shifted container mark

--- a/src/styles/themes/proton/sidebar/tab.styl
+++ b/src/styles/themes/proton/sidebar/tab.styl
@@ -542,7 +542,7 @@
 
 .Tab[data-pin="false"] .ctx
   top: 5px
-  right: 3px
+  right: 0
   width: 2px
   height: calc(100% - 10px)
 
